fix: nav overlap on scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -146,3 +146,7 @@ body {
     padding: 8rem 4rem;
   }
 }
+
+html {
+  scroll-behavior: smooth;
+}
